Testing components and setting styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,15 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
+/* GLOBAL SETTINGS */
+
+/* TOPNAV */
 
 .TopNav {
   background-color: green;
 }
+
+/* TOPNAV ENDS */
+
+/* MAP */
+/* MAP ENDS */
+
+/* BOTTOM NAV */
+/* BOTTOM NAV ENDS */
