--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,17 @@
 /* TOPNAV ENDS */
 
 /* MAP */
+
+.leaflet-container {
+  height: 600px;
+  width: 100%;
+}
+
+.leaflet-div-icon {
+  background: transparent;
+  border: none;
+}
+
 /* MAP ENDS */
 
 /* BOTTOM NAV */
