--- a/src/styles.css
+++ b/src/styles.css
@@ -8,17 +8,11 @@
 
 /* TOPNAV ENDS */
 
+/* SERVICE PROVIDER CARD */
+
+/* SERVICE PROVIDER CARD ENDS */
+
 /* MAP */
-
-.leaflet-container {
-  height: 600px;
-  width: 100%;
-}
-
-.leaflet-div-icon {
-  background: transparent;
-  border: none;
-}
 
 /* MAP ENDS */
 
